themes/shiro/assets/src/sass/css/scss/objects/_header.scss
$header-bp: 1050px;
$header-bp-mw: 1049px;

@mixin blueTextShadow() {
	text-shadow: 0 2px 2px $color-blue;
}

@mixin pinkTextShadow() {
	text-shadow: 0 2px 2px $color-pink;
}


.header-default {
	position: relative;
	@include marginBottom(0, 0, $medium-bp);

	@media (min-width: $header-bp) and (max-height: 930px) {
		// TODO remove all min-heights in this stylesheet?
		//min-height: 100vh;
	}
	@media (max-width: $medium-bp) {
		padding-bottom: 10px;
	}

	a {
		transition: 0.3s all;
	}

	ul li {
		margin-left: 0;
		margin-right: 1rem;
		&:last-child {
			margin-right: 0;
		}

		&.current_page_item {
			a {
				color: $color-blue;

        span {
          border-bottom: 2px solid $color-blue;
        }
			}
		}

		a {
			font-size: 14px;
			font-weight: 600;
			color: $color-black;
		}
	}


	&.h1-highlighted {
		h1 {
			color: $color-blue;
			background: #fff;
		}
	}

	h1 {
		@include font-size(47, 36);
		font-weight: normal;
	}

	// Header content positioning classes
	.bg-pattern-container {
		position: absolute;
		bottom: 7%;
		top: 0;
		right: 0;
		left: 0;

		@media (min-width: $header-bp) {
			bottom: 0;
		}
	}

	.bg-img-container.bg-pattern {
		width: 100%;
		position: absolute;
		top: 0; bottom: 0; left: 0; right: 0;
		z-index: 0;

		.bg-img {
			mix-blend-mode: multiply;
		}
	}

	// Default page, blog page
	&.minimal {

		.bg-pattern-container {
			position: absolute;
			bottom: 7%;
			top: 0;
			right: 0;
			left: 0;

			@media (min-width: $header-bp) {
				bottom: 0;
			}
		}

		&--short {
			min-height: auto;
			//padding-bottom: rem(340);

			// TODO: Take header height and header-inner height to auto.
			.header-inner {
				min-height: auto;
			}
		}


		&--news {
			min-height: auto;
			padding-bottom: rem(5);

			@media (min-width: $medium-bp) {
				padding-bottom: rem(300);
			}

			// TODO: Take header height and header-inner height to auto.
			.header-inner {
				min-height: auto;
			}
		}
	}


	// With main image
	&.featured-photo {

		// Main image on the right, content on the left
		&--content-left {

			.bg-pattern-container {
				position: absolute;
				bottom: 7%;
				top: 0;
				right: 0;
				left: 0;

				@media (min-width: $header-bp) {
					bottom: 0;
				}
			}

			.bg-img-container.bg-pattern {
				width: 100%;
				position: absolute;
				top: 0; bottom: 0; left: 0; right: 0;
				z-index: 0;

				.bg-img {
					mix-blend-mode: multiply;
				}
			}

			.logo-nav-container {
				@include paddingBottom(48, 40, $header-bp);
			}

			.photo-aspect-ratio {
				@include aspect-ratio(16, 11);
				position: relative;
				top: -16px;	bottom: rem(40); left: 0; right: 0;
				order: 2;
				width: 100%;
				overflow: hidden;

				@media (min-width: $header-bp) {
					top: 0;
					position: absolute;
				}
			}

			.bg-img-container {
				width: 75%;
				right: 0;

				@media (max-width: $header-bp-mw) {
					width: 100%;
				}

				.bg-img {
					background-position: center center;
					background-size: cover;
				}
			}

			.header-content {
				position: relative;
				z-index: 9;

				h2 {
					border-bottom: 3px solid $wmui-color-base0;
					@include font-size(38, 32);
					font-weight: 500;
				}
			}

			.page-landing .page-intro-text p {
				@include font-size(22, 18);
			}
		}


		&--photo-centered {
			//margin-bottom: rem(75);
			@media (min-width: $large-bp) {
				//margin-bottom: rem(400);
			}

			@media (min-width: $medium-bp) {
				//margin-bottom: rem(100);
			}

			.photo-aspect-ratio  {
				@include aspect-ratio(2, 1);
				position: relative;
				bottom: 0;
				left: 0;
				right: 0;
				order: 2;
				width: 100%;
				overflow: hidden;
				bottom: rem(-75);

				@media (min-width: $header-bp) {
					position: absolute;
					right: 0;
					bottom: rem(-395);
					left: 0;
					z-index: 0;
				}
				.bg-img-container {
					width: 100%;
					position: absolute;
					top: 0; bottom: 0; left: 0; right: 0;
					z-index: 0;

				}

			}



		}

	}

	.header-inner {
		display: flex;
		flex-direction: column;
		position: relative;

		@media (min-width: $header-bp) and (max-height: 930px) {
			//min-height: calc(100vh - 80px);
		}

		@media (min-height: 931px) {
			//min-height: rem(850);
		}

		@media (max-width: $header-bp-mw) {
			//min-height: initial;
		}

		&.nav-open {
			background: $color-blue;

			.header-main {
				position: relative;

				&:after {
					position: absolute;
					content: "";
					top: 0; bottom: 0; right: 0; left: 0;
					background: $color-blue;
					z-index: 9;
				}
			}
		}
	}

	.header-main {
		display: flex;
		flex-grow: 1;
		position: relative;

		@media (min-width: $header-bp) {
			align-items: flex-end;
			justify-content: space-between;
		}

		@media (max-width: $header-bp-mw) {
			flex-direction: column;
		}
	}

	.header-content {
		position: relative;
		z-index: 2;
		margin-top: 75px;
		width: 100%;
	}

	.eyebrow {
		margin-bottom: 1rem;

		a.back-arrow-link {
			@include font-size(16, 14);
		}

		a.back-arrow-link::before {
			content: '← ' #{"/*rtl:'→ '*/;"};
		}

		&.h1 {
			margin-bottom: 5rem;
		}

		&.h2 {
			border-bottom: 3px solid $wmui-color-base0;
			text-transform: none;
			@include font-size(38, 32);
			font-weight: 500;
		}


		a {
			color: $color-blue;
			&:hover {
				text-decoration: underline;
			}
		}
	}

	.post-meta {
		margin-top: 1rem;
		line-height: 2;
		@include font-size(24, 16);

		a {
			@include linkHighlight($color-periwinkle, $color-blue, 0, 0, 27, 27, $medium-bp);
			color: $color-black;
			border-bottom: 2px solid rgba(57, 36, 255, 0.3);
			font-weight: normal;

			&:hover {
				color: $color-black;
			}
		}
	}

	.social-container {
		display: flex;
		align-items: center;
		flex-direction: column;
		z-index: 2;

		@media (max-width: $large-bp) {
			flex-direction: row;
			align-items: left;

			ul li {
				display: inline-block;
				margin-right: 0;
			}
		}

		.h5 {
			color: #fff;
			margin-right: 1rem;
		}

		a {
			color: $color-turquoise;

			i {
				transition: 0.3s all;
			}

			&:hover {
				color: #17A8E0;

				i {
					transform: scale(1.17);
					color: #17A8E0;
				}
			}
		}
	}

	.ungrid {
		background: #fffd33;
		padding: 2.5rem 0;
		width: 100vw;
		position: relative;
		left: 50%;
		right: 50%;
		margin-left: -50vw;
		margin-right: -50vw;
		margin-top: -2rem;
		max-height: 24rem;

		&.ungrid-extra-height {
			max-height: 28rem;
		}

		.fifty-fifty {
			min-height: 17rem;
		}

		.h2.eyebrow {
			text-transform: uppercase;
			border: none;
			color: $color-blue;
			@include font-size( 24, 22);
		}

		.btn-pink {
			margin-top: 1rem;

            img.secure {
                height: 15px;
                margin-right: 5px;
                margin-bottom: -1px;
            }
		}

		h1 {
			font-weight: bold;
			@include font-size( 40, 40 );
			padding-right: 3rem;
		}

		.bg-img {
			height: 100%;
			margin-top: 0.8rem;
			background-size: cover;
			background-repeat: no-repeat;
			background-color: #ffb0dd;
			background-blend-mode: multiply;
		}

		.content {
			position: relative;
			background: #fff;
			padding: 1.5rem 2rem;
			width: 50%;
			margin-left: 40%;
			margin-top: -5rem;
			p {
				@include font-size(20, 20);
			}

			@media (max-width: $medium-bp) {
				margin-left: 0;
				width: 100%;
			}
		}
	}

	&.header-pink .ungrid {
		background: #fbe9f1;

		.h2.eyebrow {
			color: #f61971;
		}
	}

	&.header-blue .ungrid {
		background: #eeeaff;

		.bg-img {
			background-color: #eeeaff;
		}

		.h2.eyebrow {
			color: #3a25ff;
		}
	}
}

.header-single {
	margin-top: 150px;
	width: 100%;

	h1 {
		@include font-size(38, 32);
		font-weight: bold;
	}

	.post-meta {
		margin-top: 0.5rem;
	}
}

.header-role {
	border-bottom: 3px solid $wmui-color-base0;

	h1 {
		font-weight: 500;
		margin: 0;
	}

	.post-meta {
		margin: 0;
	}

	a {
		color: $color-blue;
	}

	.side-list {
		margin-bottom: 10px;
	}
}


.header-default.header-pink {
	position: relative;
	@include marginBottom(0, 0, $medium-bp);

	.header-inner.nav-open {
		background: $color-pink;
	}
	.logo-nav-container nav,
	.current-menu-item {
		color: $color-blue;
	}
	.translation-bar,
	.translation-bar .translation-icon,
	.translation-bar .arrow-wrap {
		background: $color-dark-dark-pink;
		color: #9CFFE7;
	}
	.eyebrow {
		color: $color-pink;
	}

	.header-content h2 {
		border-color: $color-pink;
	}
}

.blackout_wrapper:hover>.blackout {
    background: transparent;
}

.blackout {
    padding: 2px;
    color: #000000;
    background: #000000;
}

.blackout:hover {
    background: transparent;
}

// TODO: Fix for use beyond transparency report and campaign pages and data page template with a parent
.page-template-page-data.page-child,
.page-template-page-report-landing,
.page-id-61699,
.page-id-62419 {
    .header-content {
        margin-top:25px;

        h1 {
            width:91%;
        }

        h2.h4.eyebrow {
            margin-bottom: 3rem;
            border-bottom: 0px;
        }
    }
}
.page-id-61705 {
    .toc {
        display: none;
    }
}

